spade-tests/src/snapshots/spade_tests__ast_lowering__multiple_labels_for_same_stage.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Multiple labels for the same stage
  ┌─ testinput:4:10
  │
3 │         'a
  │          - Previously labeled here
4 │         'b
  │          ^ This stage has already been labeled


